...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/card_pet_image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/dog_mock_image"
            android:scaleType="centerCrop"/>

        <LinearLayout
...
                android:text="Pet name"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:gravity="center_vertical"
                android:paddingLeft="20dp" />

            <CheckBox
                android:id="@+id/card_pet_favourite"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:button="@drawable/ic_favourite_icon"
                app:buttonTint="@drawable/ic_favourite_icon_color"
...
