...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Типы питомцев"
        style="@style/TextAppearance.MaterialComponents.Subtitle1" />

    <CheckBox
        android:id="@+id/filter_view_parent_check_box_types"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Все типы"
        android:checked="true" />

    <LinearLayout
...
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Приюты"
        style="@style/TextAppearance.MaterialComponents.Subtitle1" />

    <CheckBox
        android:id="@+id/filter_view_parent_check_box_shelters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Все приюты"
        android:checked="true" />

    <LinearLayout
...
