...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/search_fragment_start_search"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:text="Начать поиск!" />

        <!--  Additional settings and expand/collapse arrow  -->
        <CheckBox
            android:id="@+id/search_fragment_show_more_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:layoutDirection="rtl"
            android:text="Дополнительные настройки"
...
