...
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/search_fragment_discrete_scroll_view">

    <com.yarolegovich.discretescrollview.DiscreteScrollView
        android:id="@+id/search_fragment_recycle_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:dsv_orientation="horizontal"
        tools:listitem="@layout/card_pet" />
</LinearLayout>
