<resources>
    <string name="app_name">Найди своего питомца</string>

    <string name="favourite_nav">Избранное</string>
    <string name="search_nav">Поиск</string>
    <string name="profile_nav">Профиль</string>

    <string name="profile_fragment_feedback">Вы также можете отправить нам обратную связь, где можете рассказать о ваших впечатлениях о приложении, предложениях по улучшению или дефектах.</string>
    <string name="search_fragment_start_search">Чтобы начать поиск, выберите любой из вариантов. Можно выбрать несколько.</string>

    <string name="pet_info_text">Hula is a super smart amazing dog with so much love to give. Hula is well trained knows all commands sit, heal, go to your bed, stay on your bed, go to your crate, paw she knows it all. Hula is very protective and so loving g she needs a experienced owner who keeps her in check and loves her. She loves to play with toys she is a great fetcher and will be the most loyal dog you will ever know. We require that you meet with our trainer and that you take 15 training sessions with our trainer. You will love our trainer he has been training for 30 years. Give Hula a chance to be your forever best friend. She was abandoned and given up and hit in the face and she has come through it all.</string>
    <string name="pet_breed">Порода</string>
    <string name="pet_breed_husky">Наски</string>
    <string name="pet_age">Возраст/Дата рождения</string>
    <string name="pet_age_1_year">1 год</string>
    <string name="pet_name">Pet name</string>
    <string name="pet_type">Тип</string>
    <string name="pet_type_dog">Собака</string>
    <string name="pet_gender">Пол</string>
    <string name="pet_gender_girl">Девочка</string>
</resources>