...
                android:text="Изменить пароль"
                android:textSize="12sp"
                style="?attr/materialButtonOutlinedStyle" />

            <!--    Sign out    -->
            <Button
                android:id="@+id/profile_fragment_sign_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Выход из аккаунта"
                android:textSize="12sp"
                style="?attr/materialButtonOutlinedStyle" />
...
